SecurityConfig edited